# game-engine

./: .gitignore  CMakeLists.txt
engine/: GameApplication.cpp  GameApplication.h  Interfaces.h  ScreenElementScene.cpp  ScreenElementScene.h  standards.h
engine/Actor/: CircleObjectParams.cpp  CircleObjectParams.h  SpriteActorParams.cpp  SpriteActorParams.h  SpriteObjectParams.cpp  SpriteObjectParams.h
engine/Actor/Base/: ActorParams.cpp  ActorParams.h  BaseActor.cpp  BaseActor.h
engine/EventManager/: EventManager.cpp  EventManager.h  IEventManager.cpp  IEventManager.h
engine/EventManager/Events/: BaseEventData.cpp  BaseEventData.h  EmptyEventData.cpp  EmptyEventData.h  EvtData_Keyboard_key_Down.cpp  EvtData_Keyboard_key_Down.h  EvtData_Mouse_Move.cpp  EvtData_Mouse_Move.h  EvtData_Move_Actor.cpp  EvtData_Move_Actor.h  EvtData_New_Actor.cpp  EvtData_New_Actor.h  EvtData_New_Game.cpp  EvtData_New_Game.h  EvtData_Request_New_Actor.cpp  EvtData_Request_New_Actor.h  IEventData.cpp  IEventData.h  IEventListener.cpp  IEventListener.h  NewActorEventData.cpp  NewActorEventData.h
engine/Logic/: BaseGameLogic.cpp  BaseGameLogic.h  Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h
engine/Math/: Vec2.cpp  Vec2.h
engine/SceneGraph/: CircleNode.cpp  CircleNode.h  RootNode.cpp  RootNode.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  SceneNodeProperties.cpp  SceneNodeProperties.h  SpriteNode.cpp  SpriteNode.h
engine/Timer/: Timer.cpp  Timer.h
engine/Utils/: Optional.h
engine/View/: HumanView.cpp  HumanView.h
game/: AwesomeController.cpp  AwesomeController.h  AwesomeEventListener.cpp  AwesomeEventListener.h  AwesomeGameApplication.cpp  AwesomeGameApplication.h  AwesomeGameLogic.cpp  AwesomeGameLogic.h  AwesomeGameViewListener.cpp  AwesomeGameViewListener.h  AwesomeHumanView.cpp  AwesomeHumanView.h  DriftsController.cpp  DriftsController.h  DriftsGameApplication.cpp  DriftsGameApplication.h  main.cpp
game/Actor/: PlayerObjectParams.cpp  PlayerObjectParams.h  PlayerParams.cpp  PlayerParams.h
game/Events/: EvtData_New_Actor.cpp  EvtData_New_Actor.h  EvtData_New_Game.cpp  EvtData_New_Game.h
game/Logic/: AwesomeEventListener.cpp  AwesomeEventListener.h  AwesomeGameLogic.cpp  AwesomeGameLogic.h  DriftsEventListener.cpp  DriftsEventListener.h  DriftsGameLogic.cpp  DriftsGameLogic.h
game/SceneGraph/: PlayerNode.cpp  PlayerNode.h
game/View/: AIView.cpp  AIView.h  AIViewListener.cpp  AIViewListener.h  AwesomeGameViewListener.cpp  AwesomeGameViewListener.h  AwesomeHumanView.cpp  AwesomeHumanView.h  DriftsGameViewListener.cpp  DriftsGameViewListener.h  DriftsHUD.cpp  DriftsHUD.h  DriftsHumanView.cpp  DriftsHumanView.h
